--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">´ó¼ÍÔª</a> | <a href="https://git.io/fjHxh" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="https://git.io/fjHpJ" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="https://git.io/fjHpk" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="https://git.io/fjHpL" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="https://git.io/fjHpt" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="https://git.io/fjHpm" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2018/11/1b4b324423b9f47e62cff9d9046e359a-320x200.jpg">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖÐ¾­¼ÃÁ½ÖØÌì ´¨ÆÕ£ºÓëÏ°Ç©Ð­Òé</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-320x200.jpg">Ïã¸ÛÊ¥µ®´ßÀáµ¯ËÁÅ° ¼ì²â±¨¸æ½ÒÕþ¸®»ÑÑÔ</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744649.md#1">Ó¢Ô¤ÑÔ¼Ò£º2020ÄêÖÐ¹ú·¢Éú¸ïÃü ´¨ÆÕÁ¬ÈÎ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">ÖÐ¹²¾¡Ê§ÈËÐÄ ·´Ï°ÊÆÁ¦Óë±£Ï°ÅÉ¼¤Õ½</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736488.md#1">¿Í»ú½µÏã¸ÛÔâ¾Ü ´«ÖÐ¹²¾ü»úÀ¹½ØÒªÇóÔ¶Àë°ÄÃÅ</a><br>
@@ -9,11 +9,9 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1">¡¾ÐÂÎÅ¿´µã¡¿Ï°·Ã°Ä»êÏµÏã¸Û 3ÕæÏà±±¾©ÐÄÁ¹</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11735906.md#1">±±¾©Ç¿°ä¡°ÏÞ¹·Áî¡± ´óÅú°®È®±»¡°°²ÀÖËÀ¡±</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">¸ü¶à......</a></p><hr><h2><p><strong>½ñÈÕÆÀÂÛ</strong></p></h2>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750032.md#1">³ÌÏþÅ©£º¾­¼ÃÈ«Çò»¯µÄÖÐ¹²ÏÝÚå</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749390.md#1">¶«·½¾õ£ºÐÁ¿àÅ©Ãñ¹¤ ÌÖÐ½Â·ÉÏÄÑ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748931.md#1">Â½¿Í£ºÔÚ´óÂ½ÕþÖÎÑ§Ï°Ñ§³öÈý¸ö¸üÕý</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737584.md#1">ÀîÐñÍ®£ºÍÚ¾òÎåÇ§ÄêÎÄÃ÷¾ªÊÀ±¦²Ø£¨11£©</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748707.md#1">ÍõÓÑÈº£ºÖÐ¹²µÄ½âÌå¿ÉÄÜ¿ìËÙ·¢Éú£¿</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748173.md#1">¸ßÌìÔÏ£ºÄÏÑÇº£Ð¥15Äê 2020ÔÖº¦Ô¤ÑÔ»á·ñ³ÉÕæ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748518.md#1">ºéÎ¢£º2020ÖÐ¹úÈË×îÆÚ´ýµÄÔ¤ÑÔ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748249.md#1">ÈÎÊÀºÀ£ºÖÐ¹²µßµ¹ÊÇ·ÇÉÆ¶ñ</a><br>
@@ -22,6 +20,8 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747307.md#1">ÖÜÏþ»Ô£º ´¨Ï°ÔÙ´Î»áÃæÓëÓ¢¹úÔ¤ÑÔ¼ÒµÄÔ¤ÑÔ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11745899.md#1">ÃÀ¹ú¹ÊÊÂ£º½×Ç°ÍòÀï ¹ÅÂÞÂíÎÄÃ÷ÔÚ±±ÃÀ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747262.md#1">ÈÎÖØ£ºÖÐ¹²Íâ»ã¸æ¼± Ãñ¼ä×Ê±¾¼ÓËÙÍâÌÓ</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747187.md#1">³£ÈÌ£ºÖÐ¹²ÈÃÉ±ÈË·¸³ÉÎª¡°±ê±ø¡±¡°Ó¢Ä£¡±</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746948.md#1">Ô¬±ó£º½û¹ýÊ¥µ® ËµÃ÷Ã«Ê±´úÕýÔÚÄæÏ®£¡</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">¸ü¶à......</a></p><hr><h2><p><strong>¶À¼ÒÊÓ½Ç</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722684.md#1">¡¾¶À¼Ò¡¿°ïÖÐ¹²ºìÉ«×Ê±¾º£Íâ²¼¾ÖµÄÉñÃØÈËÎï</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11705858.md#1">ÃÀÖÐ¹ØÏµ¿ìËÙ¶ñ»¯ Ñ§Õß£ºÐÂÀäÕ½ÒÑ¿ªÊ¼</a><br>
@@ -30,11 +30,8 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">´óÂ½Ç°Ìå²Ù¹Ú¾üÕÅÉÐÎäÉú»îÎÞ×Å ÒòÍµÇÔÈëÓü</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749146.md#1">¡°Ïã¸Û¾¯±©Õ¹¡±È«Çò½ÓÁ¦ Ì¨ÖÐÁ¬Ù¯Ç½È«Ì¨Ê×Õ¹</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750017.md#1">ÖÐ¹²×ÔÖÆº½Ä¸´©Ô½Ì¨º£ Ê±»úÃô¸Ð</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749930.md#1">3ÍòÔªº×¸ÚÂò·¿ Ñ§Õß£º²úÒµ²»Õñ ÈË¿ÚÍâÁ÷</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749928.md#1">·´ÉøÍ¸·¨ÕùÒé Â½Î¯»áÖ¸ËÎ³þè¤²»ÁË½â·¨°¸</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1">Ïã¸ÛÊ¥µ®´ßÀáµ¯ËÁÅ° ¼ì²â±¨¸æ½ÒÕþ¸®»ÑÑÔ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749889.md#1">Ò»ÖÐ¹úÁôÑ§ÉúÒòÉ±ÈËÔÚÈÕ±¾±»´¦ÒÔ½ÊÐÌ</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749281.md#1">¡¾ÕäÑÔÕæÓï¡¿Ðì¼Ò½¡£º´òÑ¹»ÆÉ«¾­¼ÃÈ¦ÊÊµÃÆä·´</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">¡¾2019ÅÌµã¡¿ÖÐ¹²Éç»á¼à¿ØµÄ¼«¶Ë»¯</a><br>
@@ -42,10 +39,12 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749335.md#1">´óÇìÓÍ¹Þ³µ±¬Õ¨ÖÂ4ËÀ ¹Ù·½14ÌìÎ´Í¨±¨</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738475.md#1">¡¾2019ÅÌµã¡¿ÖÐÃÀ½»·æÖ®²Æ¾­·çÔÆÂ¼</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747928.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿2020ÄêÖÐ¹ú¾­¼Ã¾Å´óÇ÷ÊÆ£¨ÉÏ£©</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748993.md#1">×îÃô¸ÐÎÊÌâ ÍøÃñÎÊÈçºÎÇåÏ´¡°Ï¸¾±Æ¿¡±±»É¾</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748982.md#1">Ç°¸Û¾¯£ºÊµµ¯¿ªÇ¹ÎÞºó¹û ÓÐ¾¯Ô±´À´ÀÓû¶¯</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748707.md#1">ÍõÓÑÈº£ºÖÐ¹²µÄ½âÌå¿ÉÄÜ¿ìËÙ·¢Éú£¿</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749534.md#1">¹úÃñµ³µ²·´ÉøÍ¸·¨ ÁÖ·É·«£ºµ½µ×ÔÚ·´¶ÔÊ²Ã´£¿</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749541.md#1">ÓÍ¼ÛÀ´µ½Èý¸öÔÂÀ´×î¸ßµã ÓÐÈý¸öÔ­Òò</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749205.md#1">¹ãÖÝ´óÑ§Ç°Ôº³¤»ñËÀÐÌ ÔøÍ±ËÀÍ¬Ð£´¦³¤·ò¸¾</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748993.md#1">×îÃô¸ÐÎÊÌâ ÍøÃñÎÊÈçºÎÇåÏ´¡°Ï¸¾±Æ¿¡±±»É¾</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748802.md#1">¹ùÌ¨Ãú£ºÃÀÖÐ¿Æ¼¼Õ½¸Õ¿ªÊ¼ Ì¨ÍåÓ¦°ÑÎÕ»úÓö</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749026.md#1">ÀÏÎÎ×¹ÈëÖÐ¹²Õ®ÎñÏÝÚå ¸ºÕ®³¬¹ýGDPÒ»°ë</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746872.md#1">¿Ø¸æ½­ÔóÃñ  É½¶«±Ú¹Ò³§³¤ÌïÊÀºéÔâÆÈº¦ÀëÊÀ</a><br>
@@ -88,8 +87,9 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746539.md#1">ÖÐ¹ú¶àÊ¡½øÈëÁ÷¸ÐÁ÷ÐÐÆÚ ¼×ÐÍÁ÷¸ÐÎªÖ÷</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11745793.md#1">ÃÀÃ½Ê×´ÎÅûÂ¶ ÖÐ¹²Ô®Öú»ªÎª750ÒÚÃÀÔª</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746220.md#1">ºþ±±Ò»Å®Ó¤±»¶ªÀ¬»øÍ°4Ð¡Ê± ÈÔÎÞ¸¸Ä¸ÏÂÂä</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745421.md#1">XÉäÏß»ú·øÉä³¬±ê ÖØÇìÒ»Ò½ÔºÊ®¶àÃûÖ°¹¤»¼°©</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ"><br>ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³"><br>¾ÅÆÀ¹²²úµ³</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ"><br>¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö""><br>ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯"><br>¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì"><br>Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°"><br>Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª"><br>ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½"><br>ÌúÖ¤ÈçÉ½</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ"><br>Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦"><br>µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ"><br>ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá"><br>Ë«³ÇÑªÀá</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤"><br>ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720"><br>´Ó610µ½720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ"><br>ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý"><br>ÆÊÎö1400Àý</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà"><br>ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó"><br>±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513"><br>¼ûÖ¤513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ"><br>¹¦·ò Ñ°µÀ</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£"><br>¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ"><br>ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ"><br>ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²"><br>Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"><br>ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"><br>¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"><br>Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨"><br>303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"><br>º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"><br>Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/sloxqr240/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"><br>²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743469.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240928582478-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743469.md#1">¡¾ÐÂÎÅ¿´µã¡¿Ê¥µ®×£¸£ È«ÇòÍøÓÑ¼ÄÓïÏã¸Û</a><br>12ÔÂ7ÈÕ£¬ÎÒÃÇ·¢ÆðÁË¡¶2020£º¼ÄÓïÏã¸ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745643.md#1">¡¾Ô¤¸æ¡¿ÐÂÌÆÈËÊ¥µ®½ÚÆÚ¼ä²¥³öµçÓ°¡¶¹éÍ¾¡·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11743842.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿ÎåÏîÖ÷Òò ¸ÛÌ¨ÏÆÇàÄê¿¹Õù³±</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742729.md#1">ÔøÔâ40ÖÖ¿áÐÌ Ò½ÉúÎéÈºÔÙ±»½ÙÈëÓÀ´¨¼àÓü</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744817.md#1">ÈËÈ¨×éÖ¯Óõ¼ÓÄÃ´ó³·ÏúÖÐ¹²¹ÙÃ½²¥·ÅÖ´ÕÕ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744898.md#1">ºÓÄÏÒ»¹«Ê¾Ãûµ¥Ð¹Â¶3260ÈËÉí·ÝÖ¤ºÅÂë</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745733.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745733.md#1">´óÂ½44¼ÒÃñÆó±ä¹úÆó ¹ú×ÊÈë¹ÉÒµ¼¨ÊÜ¹Ø×¢</a><br>½ØÖÁ12ÔÂ25ÈÕ£¬´óÂ½ÓÐ44¼ÒÉÏÊÐ¹«Ë¾µÄ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745594.md#1">·ÖÎö£º¼ÛÖµ¹Û³åÍ»ÁîÖÐ¹úÆ·ÅÆ¹ú¼ÊµØÎ»µÍ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745418.md#1">Âô¼Ù±Ê¼Ç±¾µçÄÔµç³Ø ÃÀ»ªÈË»ò×øÀÎ50Äê</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745512.md#1">ÖÐ¹úappÊ§È¥¿ØÖÆÈ¨ Ó¡¶ÈÈËÖØÐÂÖ÷µ¼±¾µØÊÐ³¡</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745408.md#1">Â½ÆóÓâ1300ÒÚÎ¥Ô¼´´¼ÍÂ¼ ¹Ù³ÆÃ÷Äê¸üÄÑ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745406.md#1">ÖÐ¹²·¢ÎÄÑÏ·À¹æÄ£ÐÔÊ§Òµ¿¹Õù Ô¤Ê¾Ê§Òµ³±£¿</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745711.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/80832240_514425755830972_199441371939995648_n-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745711.md#1">½Ò¸§Ë³³óÎÅºó »¨Ç§·¼ÓÖ½£Ö¸¹ãÖÝÔâ¼¥·í</a><br>ÖÐ¹²¡°¸ß¼¶ÎåÃ«¡±»¨Ç§·¼ÔÚÆØ¹â¸§Ë³ÊÐ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">ÖÐ¹²¾¡Ê§ÈËÐÄ ·´Ï°ÊÆÁ¦Óë±£Ï°ÅÉ¼¤Õ½</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745443.md#1">Ä¦ÍÐ³µºá´©Àî¿ËÇ¿³µ¶Ó ÏÕÄðÒâÍâ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745305.md#1">ÉæÊÕÊÜÖÐ¹ú²©²ÊÆóÒµ»ß½ð ÈÕ±¾ÖÚÒéÔ±±»²¶</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745210.md#1">ÖÐ¹ú¶ÔÃÀÏ¡ÍÁ´ÅÌú³ö¿Ú11ÔÂÈñ¼õ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742862.md#1">¡¾2019ÅÌµã¡¿ÖÐ¹úÊ®´ó¸»ºÀµÄÉúËÀ½Ù</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1">Ôâ²¡ÈË¼ÒÊô´Ì¾± ±±¾©Ò»Ò½ÔºÅ®Ò½ÉúÉËÖØÉíÍö</a><br>ÖÐ¹ú´óÂ½ÔÙ´«ÑÏÖØ¡°Ò½ÄÖ¡±ÊÂ¼þ¡£12ÔÂ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744109.md#1">ÖØÇìÄÐ×Ó×¹Â¥ÔÒÖÐ2Å®ÖÐÑ§Éú 3ÈË¾ùËÀÍö</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743575.md#1">ºþÄÏ¡°12¡¤4¡±´ó±¬Õ¨ ËÀÕß¼ÒÊô£ºÕþ¸®ÇÀÊ¬</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742827.md#1">´óÂ½½­ºþÎªºÎ¡°µ×³¯Ìì¡± ×¨¼Ò½ÒÃØ£¨ÏÂ£©</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742586.md#1">ºÓÄÏÐÅÑôÒ»ÔØ¿Í31ÈË´ó°Í·­³µ ÖÂ2ËÀ¶àÉË</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741434.md#1">¹þ¶û±õÒ½Ôº¶ù¿Æ±¬Âú ×ßÀÈ×ùÒÎÌù±àºÅµ±²¡´²</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745421.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-175051588-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745421.md#1">XÉäÏß»ú·øÉä³¬±ê ÖØÇìÒ»Ò½ÔºÊ®¶àÃûÖ°¹¤»¼°©</a><br>ÖØÇìÊÐÉ³Æº°ÓÇøÖÐÒ½ÔºÓÐ17ÃûÖ°¹¤»¼°© ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748143.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/26£©</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745633.md#1">ÖÜ½ÜÂ×MVÄÌ²èµê ´óÂ½ÏÖ110¶à¼ÒÉ½Õ¯ÃÅÊÐ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745357.md#1">ÀîÐ¡ÁúÅ®¶ùÆðËß´óÂ½Õæ¹¦·ò²ÍÌü Ë÷ÅâÓâ2ÒÚÔª</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744743.md#1">²ÌÓ¢ÎÄ£ºÌ¨ÍåÓÇÖÐ¹²ÉøÍ¸ ·´ÉøÍ¸·¨²»ÊÇ½äÑÏ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744043.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/24£©</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745307.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186649027-1-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745307.md#1">´¨ÆÕÓëµÚÒ»·òÈË·¢±íÊ¥µ®ÖÂ´Ç È«ÎÄ·­Òë</a><br>12ÔÂ25ÈÕÊ¥µ®½Ú£¬´¨ÆÕ£¨ÌØÀÊÆÕ£©×ÜÍ³ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744548.md#1">2020ÄêÌì½ò±¨Ö½¡¶³ÇÊÐ¿ì±¨¡·½«ÐÝ¿¯</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743343.md#1">·ëÐ¡¸ÕÖ±²¥ÂôµçÓ°Æ± ÐË·ÜÉ¹ÕÛºó138ÔªÑ¥×Ó</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741030.md#1">´óÂ½¿ÎÍâÅàÑµ»ú¹¹µ¹±Õ³± ½ñÄê1.2Íò¼Ò¹ØÍ£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11736026.md#1">´óÁ¬LogoÍ·½±ÒÉ³­µÏÊ¿Äá ÍøÃñ£ºµ¨×ÓÕæ´ó</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11735508.md#1">ºÓÄÏÒ»ÖÐÑ§ÉúÔâ°ÔÁèÖÂËÀ ¹Ù·½Ëµ·¨±»³âÐ¶Ôð</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br>´óÂ½Æû³µÐÐÒµ½ñÄêÉîÏÝÄàÌ¶£¬ÏúÁ¿ÏÂ»¬ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742305.md#1">ÍøÎÄ£ºÑëÐÐÇ®Ó¡³öÀ´ÁË ½èÇ®µÄÈËÃ»ÁË</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726478.md#1">ÖÐ¹²²Î¾üÐí½ø²»Ðí³ö Ò»´óÑ§ÉúÍËÎéÔâÖØ·£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13836324-1-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1">·¢±í³Å¸ÛÃð¹²ÑÔÂÛ ´óÂ½¶àÃû¹«ÃñÔâÐÌ¾Ð</a><br>½üÈÕ£¬´óÂ½¶àÃû¹«ÃñÒòÔÚÍøÉÏ·¢±í³Å¸Û ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11723534.md#1">Íø´«ÉÏº£ÊÐÃñÉÏ½Ö¿¹Òé ¸ßºô¡°´òµ¹¸¯°Ü¡±</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743469.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240928582478-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743469.md#1">¡¾ÐÂÎÅ¿´µã¡¿Ê¥µ®×£¸£ È«ÇòÍøÓÑ¼ÄÓïÏã¸Û</a><br>12ÔÂ7ÈÕ£¬ÎÒÃÇ·¢ÆðÁË¡¶2020£º¼ÄÓïÏã¸ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745643.md#1">¡¾Ô¤¸æ¡¿ÐÂÌÆÈËÊ¥µ®½ÚÆÚ¼ä²¥³öµçÓ°¡¶¹éÍ¾¡·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11743842.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿ÎåÏîÖ÷Òò ¸ÛÌ¨ÏÆÇàÄê¿¹Õù³±</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742729.md#1">ÔøÔâ40ÖÖ¿áÐÌ Ò½ÉúÎéÈºÔÙ±»½ÙÈëÓÀ´¨¼àÓü</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744817.md#1">ÈËÈ¨×éÖ¯Óõ¼ÓÄÃ´ó³·ÏúÖÐ¹²¹ÙÃ½²¥·ÅÖ´ÕÕ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744898.md#1">ºÓÄÏÒ»¹«Ê¾Ãûµ¥Ð¹Â¶3260ÈËÉí·ÝÖ¤ºÅÂë</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745733.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745733.md#1">´óÂ½44¼ÒÃñÆó±ä¹úÆó ¹ú×ÊÈë¹ÉÒµ¼¨ÊÜ¹Ø×¢</a><br>½ØÖÁ12ÔÂ25ÈÕ£¬´óÂ½ÓÐ44¼ÒÉÏÊÐ¹«Ë¾µÄ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745594.md#1">·ÖÎö£º¼ÛÖµ¹Û³åÍ»ÁîÖÐ¹úÆ·ÅÆ¹ú¼ÊµØÎ»µÍ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745418.md#1">Âô¼Ù±Ê¼Ç±¾µçÄÔµç³Ø ÃÀ»ªÈË»ò×øÀÎ50Äê</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745512.md#1">ÖÐ¹úappÊ§È¥¿ØÖÆÈ¨ Ó¡¶ÈÈËÖØÐÂÖ÷µ¼±¾µØÊÐ³¡</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745408.md#1">Â½ÆóÓâ1300ÒÚÎ¥Ô¼´´¼ÍÂ¼ ¹Ù³ÆÃ÷Äê¸üÄÑ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745406.md#1">ÖÐ¹²·¢ÎÄÑÏ·À¹æÄ£ÐÔÊ§Òµ¿¹Õù Ô¤Ê¾Ê§Òµ³±£¿</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745711.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/80832240_514425755830972_199441371939995648_n-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745711.md#1">½Ò¸§Ë³³óÎÅºó »¨Ç§·¼ÓÖ½£Ö¸¹ãÖÝÔâ¼¥·í</a><br>ÖÐ¹²¡°¸ß¼¶ÎåÃ«¡±»¨Ç§·¼ÔÚÆØ¹â¸§Ë³ÊÐ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">ÖÐ¹²¾¡Ê§ÈËÐÄ ·´Ï°ÊÆÁ¦Óë±£Ï°ÅÉ¼¤Õ½</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745443.md#1">Ä¦ÍÐ³µºá´©Àî¿ËÇ¿³µ¶Ó ÏÕÄðÒâÍâ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745305.md#1">ÉæÊÕÊÜÖÐ¹ú²©²ÊÆóÒµ»ß½ð ÈÕ±¾ÖÚÒéÔ±±»²¶</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745210.md#1">ÖÐ¹ú¶ÔÃÀÏ¡ÍÁ´ÅÌú³ö¿Ú11ÔÂÈñ¼õ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742862.md#1">¡¾2019ÅÌµã¡¿ÖÐ¹úÊ®´ó¸»ºÀµÄÉúËÀ½Ù</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1">Ôâ²¡ÈË¼ÒÊô´Ì¾± ±±¾©Ò»Ò½ÔºÅ®Ò½ÉúÉËÖØÉíÍö</a><br>ÖÐ¹ú´óÂ½ÔÙ´«ÑÏÖØ¡°Ò½ÄÖ¡±ÊÂ¼þ¡£12ÔÂ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744109.md#1">ÖØÇìÄÐ×Ó×¹Â¥ÔÒÖÐ2Å®ÖÐÑ§Éú 3ÈË¾ùËÀÍö</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743575.md#1">ºþÄÏ¡°12¡¤4¡±´ó±¬Õ¨ ËÀÕß¼ÒÊô£ºÕþ¸®ÇÀÊ¬</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742827.md#1">´óÂ½½­ºþÎªºÎ¡°µ×³¯Ìì¡± ×¨¼Ò½ÒÃØ£¨ÏÂ£©</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742586.md#1">ºÓÄÏÐÅÑôÒ»ÔØ¿Í31ÈË´ó°Í·­³µ ÖÂ2ËÀ¶àÉË</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741434.md#1">¹þ¶û±õÒ½Ôº¶ù¿Æ±¬Âú ×ßÀÈ×ùÒÎÌù±àºÅµ±²¡´²</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745357.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/1910180847022188-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745357.md#1">ÀîÐ¡ÁúÅ®¶ùÆðËß´óÂ½Õæ¹¦·ò²ÍÌü Ë÷ÅâÓâ2ÒÚÔª</a><br>12ÔÂ25ÈÕ£¬ÒÔÀîÐ¡ÁúÅ®¶ùShannon Lee£ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748143.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/26£©</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745633.md#1">ÖÜ½ÜÂ×MVÄÌ²èµê ´óÂ½ÏÖ110¶à¼ÒÉ½Õ¯ÃÅÊÐ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744743.md#1">²ÌÓ¢ÎÄ£ºÌ¨ÍåÓÇÖÐ¹²ÉøÍ¸ ·´ÉøÍ¸·¨²»ÊÇ½äÑÏ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744043.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/24£©</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743447.md#1">½­ËÕÒøÐÐÃâ·ÑÎª´¢»§Ä¥µ¶ ´ÎÈÕ»î¶¯¾¹±»È¡Ïû</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745307.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186649027-1-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745307.md#1">´¨ÆÕÓëµÚÒ»·òÈË·¢±íÊ¥µ®ÖÂ´Ç È«ÎÄ·­Òë</a><br>12ÔÂ25ÈÕÊ¥µ®½Ú£¬´¨ÆÕ£¨ÌØÀÊÆÕ£©×ÜÍ³ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744548.md#1">2020ÄêÌì½ò±¨Ö½¡¶³ÇÊÐ¿ì±¨¡·½«ÐÝ¿¯</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743343.md#1">·ëÐ¡¸ÕÖ±²¥ÂôµçÓ°Æ± ÐË·ÜÉ¹ÕÛºó138ÔªÑ¥×Ó</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741030.md#1">´óÂ½¿ÎÍâÅàÑµ»ú¹¹µ¹±Õ³± ½ñÄê1.2Íò¼Ò¹ØÍ£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11736026.md#1">´óÁ¬LogoÍ·½±ÒÉ³­µÏÊ¿Äá ÍøÃñ£ºµ¨×ÓÕæ´ó</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11735508.md#1">ºÓÄÏÒ»ÖÐÑ§ÉúÔâ°ÔÁèÖÂËÀ ¹Ù·½Ëµ·¨±»³âÐ¶Ôð</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br>´óÂ½Æû³µÐÐÒµ½ñÄêÉîÏÝÄàÌ¶£¬ÏúÁ¿ÏÂ»¬ ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742305.md#1">ÍøÎÄ£ºÑëÐÐÇ®Ó¡³öÀ´ÁË ½èÇ®µÄÈËÃ»ÁË</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726478.md#1">ÖÐ¹²²Î¾üÐí½ø²»Ðí³ö Ò»´óÑ§ÉúÍËÎéÔâÖØ·£</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13836324-1-150x120.jpg"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1">·¢±í³Å¸ÛÃð¹²ÑÔÂÛ ´óÂ½¶àÃû¹«ÃñÔâÐÌ¾Ð</a><br>½üÈÕ£¬´óÂ½¶àÃû¹«ÃñÒòÔÚÍøÉÏ·¢±í³Å¸Û ...<br><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11723534.md#1">Íø´«ÉÏº£ÊÐÃñÉÏ½Ö¿¹Òé ¸ßºô¡°´òµ¹¸¯°Ü¡±</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
